@@ -14,6 +14,7 @@ Anton Kasyanov
 Arthur Darcet
 Ben Bader
 Brian C. Lane
+Boris Feld
 Chris Laws
 Daniel Nelson
 David Michael Brown
