@@ -19,6 +19,10 @@ CHANGES
 
 - Allow gzip compression in high-level server response interface #403
 
+- Make UrlDispatcher ignore quoted characters during url matching #414
+Backward-compatibility warning: this may change the url matched by your queries
+if they send quoted characted (like %2F for /).
+
 
 0.16.5 (06-13-2015)
 -------------------
